Passwords and Errors - made all inputs with passwords equal (closes #10) - added more options to the *error directive (closes #12) - fixed style bug on firefox mat-form-field with a matSuffix on a mat-button-icon

--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -1,5 +1,8 @@
 .mat-form-field {
   width: 100%;
+  .mat-form-field-suffix {
+    align-self: center;
+  }
 }
 
 form {
